implement logger, improve documentation and tests
